@@ -1,5 +1,7 @@
 2006-05-09  Dave Brolley  <brolley@redhat.com>
 
+	* sid-cpu.scm (-gen-scache-semantic-fn): Generate code to set
+	abuf->written if profiling.
 	* read.scm (include): Use arch-path as file location.
 	(arch-path): Define it with a default setting.
 	(-cgen): Update arch-path when "-a" option is specified.
